# Atlas

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: architecture.md  hardware_specs.md
scripts/: validate_hardware_constants.py
simulation/: run_simulation.py
src/cpp/include/: actuator_controller.hpp  atlas_hardware.hpp  flight_computer.hpp  gnss_driver.hpp  imu_driver.hpp  safety_gate.hpp  watchdog.hpp
src/cpp/ros2/: flight_computer_node.cpp  safety_gate_node.cpp
src/cpp/src/: actuator_controller.cpp  flight_computer.cpp  gnss_driver.cpp  imu_driver.cpp  main_fc.cpp  safety_gate.cpp
src/python/arvs_bridge/: __init__.py  arvs_authority.py
src/python/atlas/: __init__.py  main.py
src/python/atlas/config/: __init__.py
src/python/atlas/config/missions/: __init__.py  leo_cargo_mission.py
src/python/atlas/config/vehicles/: __init__.py  falcon9_class.py
src/python/atlas/control/: __init__.py  control_core.py
src/python/atlas/guidance/: __init__.py  guidance_core.py
src/python/atlas/integration/: __init__.py  telemetry_bridge.py
src/python/atlas/mission/: __init__.py  mission_manager.py
src/python/atlas/sensors/: __init__.py  sensor_processor.py
tests/: conftest.py  test_arvs_integration.py  test_control_core.py  test_guidance.py  test_imu_driver.cpp  test_safety_gate.cpp  test_sensor_processor.py
